--- a/desenvolvimento.tex
+++ b/desenvolvimento.tex
@@ -1,3 +1,3 @@
-\chapter{Desenvolvimento}
+\chapter{Desenvolvimento da regressão múltipla}
 \label{ref:desenvolvimento}
-
+Foi feita uma análise de regressão linear múltipla sobre os valores da taxa de mortalidade infantil (menores de 1 ano) por 1000 nascidos - variável dependente -, da taxa de analfabetismo da população com mais de 15 anos e da proporção da população servida por esgotamento sanitário - variáveis independentes - a partir dos dados de todos os estados brasileiros e do Distrito Federal. A regressão é apresentada abaixo, com $\alpha$ = 0.5:
