--- a/resumo.tex
+++ b/resumo.tex
@@ -1,3 +1,3 @@
 \chapter{Resumo}
 \label{cap:resumo}
-
+Este artigo versa sobre a relação entre a taxa de mortalidade infantil e a taxa de analfabetismo juntamente com o índice de cobertura de esgotamento sanitário utilizando dados de todas as capitais brasileiras no período de 2015. Este trabalho é importante por debater as condições de vida de milhões de brasileiros e apresentar algumas considerações sobre a questão. Neste trabalho realizou-se uma regressão linear múltipla e foram feitos alguns testes para analisar a validade do modelo.
